Resolve Unable to make field private static final long java.util.concurrent.ConcurrentLinkedQueue.serialVersionUID accessible