@@ -52,6 +52,7 @@
     <!-- version compatible with openstack4j -->
     <jsr305.version>1.3.9</jsr305.version>
     <okhttp.version>3.14.9</okhttp.version>
+    <argLine>--add-opens java.base/java.util.concurrent=ALL-UNNAMED</argLine>
   </properties>
 
   <repositories>
